<resources>
    <string name="app_name">Read RSS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_usa">USA</string>
    <string name="nav_africa">Africa</string>
    <string name="nav_asia">Asia</string>
    <string name="nav_middle_east">Middle East</string>
    <string name="nav_europe">Europe</string>
    <string name="nav_americas">Americas</string>
    <string name="nav_science_technology">Science and Technology</string>
    <string name="nav_economy">Economy</string>
    <string name="nav_health">Health</string>
    <string name="nav_arts_entertainment">Entertainment</string>
    <string name="nav_usa_vote">2016 USA Votes</string>
    <string name="nav_features">One-Minute Features</string>
    <string name="nav_voa_editors_picks">VOA Editors Picks</string>
    <string name="nav_day_in_photo">Day in Photos</string>
    <string name="nav_extra_time">Shaka: Extra Time</string>
    <string name="nav_visiting">Visiting the USA</string>
    <string name="nav_exit">Exit</string>

</resources>
